--- a/03- fontes/internas.html
+++ b/03- fontes/internas.html
@@ -9,7 +9,7 @@
         {
             text-align: justify;
 
-          /* font-family: 'Work Sans', Arial, Helvetica, sans-serif;
+          font-family: 'Work Sans', Arial, Helvetica, sans-serif;
 
            font-size: 1em;
            
@@ -17,7 +17,7 @@
 
            font-style: italic;
 
-           text-decoration: underline; */
+           text-decoration: underline;
 
            /* Explicação na pág 3-4  do bloco */
         }
