--- a/03- fontes/externas.html
+++ b/03- fontes/externas.html
@@ -1,13 +1,43 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fontes com Google Fonts</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
+
+        @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+        body {
+            font-family: 'Work Sans', Arial, Verdana, sans-serif;
+            font-size: 16px;
+            color: black;
+        }
+
+        h1 {
+            font-family: 'Kaushan Script', sans serif;
+            font-size: 3em;
+        }
+
+        h2 {
+            font-family:'Kaushan Script', sans serif;
+            font-size: 2em;
+        }
+    </style>
 </head>
+
 <body>
     <h1>Título</h1>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio, laborum! Sint, quidem corrupti. Facilis unde officiis mollitia culpa! Vitae enim placeat aspernatur excepturi perferendis commodi unde, aliquid veritatis recusandae nisi.
+    <p>
+        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Minus itaque provident magni quam quis ipsa sed animi dolore aut. Nemo dolore facilis commodi reprehenderit suscipit nihil sapiente error nesciunt rerum.
+    </p>
+
+    <h2>Subtítulo</h2>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, minus quidem. Quis labore totam rem at nostrum, saepe ad assumenda voluptates suscipit, explicabo porro odit, consectetur ducimus cumque! Asperiores, ad!
     </p>
 </body>
+
 </html>
