--- a/03- fontes/baixadas.html
+++ b/03- fontes/baixadas.html
@@ -8,7 +8,7 @@
 
         @font-face {
             font-family: 'De Cria';
-            src: url('CloisterBlack.ttf') format('truetype');
+            src: url('fontes/CloisterBlack.ttf') format('truetype');
             font-weight: normal;
             font-style: normal;
 
