--- a/07- modelo de caixas/caixa3.html
+++ b/07- modelo de caixas/caixa3.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Borda Personalizada</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
 </head>
 <body>
     <h1>Teste de Borda</h1>
