--- a/Exercícios/02- cores/cor02.html
+++ b/Exercícios/02- cores/cor02.html
@@ -9,7 +9,7 @@
             height: 100%;
         }
         body {
-            background-image: radial-gradient(circle, rgb(0, 0, 172),#59237b, #E08828);
+            background-image: radial-gradient(circle, #0000ac,#59237b, #E08828);
             background-attachment: fixed;
         }
     </style>
