--- a/Projetos/01-/ios.html
+++ b/Projetos/01-/ios.html
@@ -78,15 +78,17 @@
 
 
 
-            <iframe 
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/Fhvp2tQJK3A?si=I6iFOCcqzI9HfVh5"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                allowfullscreen>
-            </iframe>
+            <div class="video">
+                <iframe
+                    width="560"
+                    height="315"
+                    src="https://www.youtube.com/embed/Fhvp2tQJK3A?si=I6iFOCcqzI9HfVh5"
+                    title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    allowfullscreen>
+                </iframe>
+            </div>
 
             <aside>
                 <h3>Quer aprender mais?</h3>
@@ -94,11 +96,11 @@
                 <p>Confira a lista dos fatos mais curiosos sobre a Apple.</p>
 
                 <ul>
-                    <li>1 - A Apple é a maior empresa de TI do mundo em receita e ativos totais, e a terceira maior fabricante mundial de celulares.</li>
-                    <li>2 - A Apple tem mais dinheiro que o Tesouro dos Estados Unidos.</li>
-                    <li>3 - Tudo o que você diz para a Siri é enviado para a Apple, analisado e armazenado.</li>
-                    <li>4 - A Apple lucrou US$ 91.990 por minuto em 2017.</li>
-                    <li>5 - A tela retina dos iPads são fabricados pela Samsung.</li>
+                    <li> A Apple é a maior empresa de TI do mundo em receita e ativos totais, e a terceira maior fabricante mundial de celulares.</li>
+                    <li> A Apple tem mais dinheiro que o Tesouro dos Estados Unidos.</li>
+                    <li>Tudo o que você diz para a Siri é enviado para a Apple, analisado e armazenado.</li>
+                    <li> A Apple lucrou US$ 91.990 por minuto em 2017.</li>
+                    <li> A tela retina dos iPads são fabricados pela Samsung.</li>
                 </ul>
 
             <p>
@@ -116,7 +118,7 @@
 
     <footer>
         <p>
-            Site criado por Bianca Melo para Desenvolvimento Profissional e construção de <a href="https://github.com/bibimelox" target="_blank">Portfólio</a>.
+            Site criado por <strong>Bianca Melo</strong> para Desenvolvimento Profissional e construção de <a href="https://github.com/bibimelox" target="_blank">Portfólio</a>.
         </p>
     </footer>
 </body>
