--- a/Projetos/01- apple/ios.html
+++ b/Projetos/01- apple/ios.html
@@ -12,18 +12,23 @@
 <body style="margin: 0px;">
 
     <header>
-        <h1>Curiosidades de Tecnologia</h1>
-        <p>
-            Tudo aquilo que você sempre quis saber sobre o mundo Tech, em um único lugar
-        </p>
-    </header>
 
-    <nav>
-        <a href="#">Home</a>
-        <a href="#">Notícias</a>
-        <a href="#">Curiosidades</a>
-        <a href="#">Fale Conosco</a>
-    </nav>
+        <div class="superior">
+            <div class="logo">
+                <a href="#">
+                    <img src="imagens/logo1.png" alt="Logo Tech">
+                </a>
+            </div>
+        </div>
+
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">Notícias</a>
+            <a href="#">Curiosidades</a>
+            <a href="#">Fale Conosco</a>
+        </nav>
+
+    </header>
 
     <main>
         <article>
