--- a/Portfólio/port.html
+++ b/Portfólio/port.html
@@ -51,7 +51,7 @@
                     </div> <!--img-flut-->
                 </div> <!--flex-->
             </div> <!--superior-->
-        </section>
+        </section> <!--cont-principal-->
 
         <section class="especialidades">
             <div class="superior"> 
@@ -78,7 +78,13 @@
                     </div> <!--esp-box-->
                 </div> <!--flex-->
             </div> <!--superior-->
-        </section>
+        </section> <!--especialidades-->
+
+        <section class="sobre mim">
+            <div class="superior">
+
+            </div> <!--superior-->
+        </section> <!--sobre mim-->
     </main>
 </body>
 </html>
