--- a/Portfólio/port.html
+++ b/Portfólio/port.html
@@ -41,13 +41,13 @@
                 <div class="flex">
                     <div class="txt-esq">
                         <h1>
-                            TRANSFORMANDO CONHECIMENTO EM REALIDADE DIGITAL<span>.</span>
+                            TRANSFORMANDO CONHECIMENTO EM <span>REALIDADE DIGITAL</span>.
                         </h1>
 
                         <p><q>Precisamos de mais modelos femininos que sejam bons em tecnologia, que sejam empreendedores. Hoje, poucas mulheres assim aparecem na mídia, e se as meninas não são representadas na televisão como inteligentes, boas em matemática e ciências, elas não têm referência à medida que crescem.</q> <br> — <em>Randi Zuckerberg</em></p>
                     </div> <!--txt-esq-->
                     <div class="img-flut">
-                        <img src="imagens/fundofoto2.png" alt="pefil">
+                        <img src="imagens/fundo.png" alt="pefil">
                     </div> <!--img-flut-->
                 </div> <!--flex-->
             </div> <!--superior-->
@@ -56,13 +56,13 @@
         <section class="especialidades">
             <div class="superior"> 
                 <h2 class="titulo">
-                    MINHAS <span>ESPECIALIDADES</span>
+                    MINHAS <span>ESPECIALIDADES.</span>
                 </h2>
                 <div class="flex">
                     <div class="esp-box">
                         <i class="bi bi-pc-display-horizontal"></i>
                         <h3>Front - end</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet similique amet quidem, odio beatae aliquid reiciendis fugit expedita deserunt reprehenderit dolorem odit in culpa ex molestias minus fuga quam tenetur!</p>
+                        <p>Possuo conhecimento em HTML5, CSS3 e JavaScript. Algumas das minhas habilidades são: Design Responsivo, Media Screen, Elementos Hover, estilos keyframes com imagens animadas flutuantes,  entre outros.</p>
                     </div>
 
                     <div class="esp-box">
@@ -80,9 +80,42 @@
             </div> <!--superior-->
         </section> <!--especialidades-->
 
-        <section class="sobre mim">
+        <section class="sobre-mim">
             <div class="superior">
+                <div class="flex">
+                    <div class="img-sobre">
+                        <img src="imagens/fundo.png" alt="fotosobre">
+                    </div> <!--img-sobre-->
 
+                    <div class="txt-sobre">
+                        <h2>
+                            OLÁ MUNDO! <span>SOU BIANCA CAETANO.</span>
+                        </h2>
+
+                        <p>
+                            Tenho 18 anos, estou cursando Análise e desenvolvimento de sistemas. Meus conhecimentos incluem HTML, CSS, JavaScript, Power BI e bancos de dados MySQL. Quando comecei a faculdade tinha em mente o cargo de Analista de Sistemas, mas, trabalhando um pouco em cada cargo, me encontrei na área Front-End. Ainda estou estudando, pois quero sempre ter mais conhecimento e dominar melhor as linguagens de Back-End para logo ser uma desenvolvedora Full-Stack!
+                        </p>
+
+                        <div class="redes-sociais">
+                            <a href="#"></a>
+                            <button class="git">
+                                <i class="bi bi-github"></i>
+                            </button>
+
+                            <a href="#"></a>
+                            <button class="inst">
+                                <i class="bi bi-instagram"></i>
+                            </button>
+
+                            <a href="#"></a>
+                            <button class="lkdn">
+                                <i class="bi bi-linkedin"></i>
+                            </button>
+                        </div>
+
+                    </div> <!--txt-sobre-->
+
+                </div> <!--flex-->
             </div> <!--superior-->
         </section> <!--sobre mim-->
     </main>
