--- a/Portfólio/port.html
+++ b/Portfólio/port.html
@@ -59,23 +59,30 @@
                     MINHAS <span>ESPECIALIDADES.</span>
                 </h2>
                 <div class="flex">
-                    <div class="esp-box">
-                        <i class="bi bi-pc-display-horizontal"></i>
-                        <h3>Front - end</h3>
-                        <p>Possuo conhecimento em HTML5, CSS3 e JavaScript. Algumas das minhas habilidades são: Design Responsivo, Media Screen, Elementos Hover, estilos keyframes com imagens animadas flutuantes,  entre outros.</p>
-                    </div>
+                    <a href="https://github.com/bibimelox/MySQL" target="_blank">
+                        <div class="esp-box">
+                                <i class="bi bi-pc-display-horizontal"></i>
+                                <h3>Front - end</h3>
+                                <p>Possuo conhecimento em HTML5, CSS3 e JavaScript. Algumas das minhas habilidades são: Design Responsivo, Media Screen, Elementos Hover, estilos keyframes com imagens animadas flutuantes,  entre outros.</p>
+                        </div>
+                    </a>
 
-                    <div class="esp-box">
-                        <i class="bi bi-database"></i>
-                        <h3>MySQL</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet similique amet quidem, odio beatae aliquid reiciendis fugit expedita deserunt reprehenderit dolorem odit in culpa ex molestias minus fuga quam tenetur!</p>
-                    </div>
+                    <a href="#">
+                        <div class="esp-box">
+                            <i class="bi bi-database"></i>
+                            <h3>MySQL</h3>
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet similique amet quidem, odio beatae aliquid reiciendis fugit expedita deserunt reprehenderit dolorem odit in culpa ex molestias minus fuga quam tenetur!</p>
+                        </div>
+                    </a>
 
-                    <div class="esp-box">
-                        <i class="bi bi-graph-down"></i>
-                        <h3>Power BI</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet similique amet quidem, odio beatae aliquid reiciendis fugit expedita deserunt reprehenderit dolorem odit in culpa ex molestias minus fuga quam tenetur!</p>
-                    </div> <!--esp-box-->
+                    <a href="#">
+                        <div class="esp-box">
+                            <i class="bi bi-graph-down"></i>
+                            <h3>Power BI</h3>
+                            <p>Pela plataforma Power BI construo relatórios e dashboards que mostram números, estatísticas, valores, listas e gráficos de forma que os dados interajam entre eles.</p>
+                        </div>
+                    </a>
+
                 </div> <!--flex-->
             </div> <!--superior-->
         </section> <!--especialidades-->
@@ -97,24 +104,26 @@
                         </p>
 
                         <div class="redes-sociais">
-                            <a href="#"></a>
-                            <button class="git">
-                                <i class="bi bi-github"></i>
-                            </button>
+                            <a href="https://github.com/bibimelox" target="_blank">
+                                <button class="git">
+                                    <i class="bi bi-github"></i>
+                                </button>
+                            </a>
+                            
+
+                            <a href="#">
+                                <button class="inst" target="_blank">
+                                    <i class="bi bi-instagram"></i>
+                                </button>
+                            </a>
+                            
 
                             <a href="#"></a>
-                            <button class="inst">
-                                <i class="bi bi-instagram"></i>
-                            </button>
-
-                            <a href="#"></a>
-                            <button class="lkdn">
+                            <button class="lkdn" target="_blank">
                                 <i class="bi bi-linkedin"></i>
                             </button>
-                        </div>
-
+                        </div> <!--redes-sociais-->
                     </div> <!--txt-sobre-->
-
                 </div> <!--flex-->
             </div> <!--superior-->
         </section> <!--sobre mim-->
