--- a/Portfólio/port.html
+++ b/Portfólio/port.html
@@ -59,7 +59,7 @@
                     MINHAS <span>ESPECIALIDADES.</span>
                 </h2>
                 <div class="flex">
-                    <a href="https://github.com/bibimelox/MySQL" target="_blank">
+                    <a href="https://github.com/bibimelox/CSS" target="_blank">
                         <div class="esp-box">
                                 <i class="bi bi-pc-display-horizontal"></i>
                                 <h3>Front - end</h3>
@@ -67,19 +67,19 @@
                         </div>
                     </a>
 
-                    <a href="#">
+                    <a href="https://github.com/bibimelox/MySQL" target="_blank">
                         <div class="esp-box">
                             <i class="bi bi-database"></i>
                             <h3>MySQL</h3>
-                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet similique amet quidem, odio beatae aliquid reiciendis fugit expedita deserunt reprehenderit dolorem odit in culpa ex molestias minus fuga quam tenetur!</p>
+                            <p>Consigo facilmente retornar dados utilizando MySQL, concactenar colunas, alterar caracteres. Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia adipisci vero repellat molestias rerum eius.</p>
                         </div>
                     </a>
 
-                    <a href="#">
+                    <a href="https://github.com/bibimelox/PowerBI" target="_blank">
                         <div class="esp-box">
                             <i class="bi bi-graph-down"></i>
                             <h3>Power BI</h3>
-                            <p>Pela plataforma Power BI construo relatórios e dashboards que mostram números, estatísticas, valores, listas e gráficos de forma que os dados interajam entre eles.</p>
+                            <p>Pela plataforma Power BI construo relatórios e dashboards que mostram números, estatísticas, valores, listas e gráficos de forma que os dados interajam entre eles, incluindo a opção de filtragem personalizada.</p>
                         </div>
                     </a>
 
@@ -100,7 +100,7 @@
                         </h2>
 
                         <p>
-                            Tenho 18 anos, estou cursando Análise e desenvolvimento de sistemas. Meus conhecimentos incluem HTML, CSS, JavaScript, Power BI e bancos de dados MySQL. Quando comecei a faculdade tinha em mente o cargo de Analista de Sistemas, mas, trabalhando um pouco em cada cargo, me encontrei na área Front-End. Ainda estou estudando, pois quero sempre ter mais conhecimento e dominar melhor as linguagens de Back-End para logo ser uma desenvolvedora Full-Stack!
+                            Tenho 18 anos, estou cursando Análise e desenvolvimento de sistemas. Meus conhecimentos incluem HTML, CSS, JavaScript, Banco de dados MySQL, Power BI e o básico do Python. Quando comecei a faculdade tinha em mente o cargo de Analista de Sistemas, mas, trabalhando um pouco em cada cargo, me encontrei na área Front-End. Ainda estou estudando, pois quero sempre ter mais conhecimento e dominar melhor as linguagens de Back-End para logo ser uma desenvolvedora Full-Stack!
                         </p>
 
                         <div class="redes-sociais">
