--- a/Portfólio/port.html
+++ b/Portfólio/port.html
@@ -16,7 +16,7 @@
         <div class="superior">
             <div class="logo">
                 <a href="#">
-                    <img src="imagens/logobianca.png" alt="Logo Bianca">
+                    <img src="imagens/image (1).png" alt="Logo Bianca">
                 </a>
             </div>    
 
@@ -41,13 +41,13 @@
                 <div class="flex">
                     <div class="txt-esq">
                         <h1>
-                            TRANSFORMANDO CONHECIMENTO EM <span>REALIDADE DIGITAL</span>.
+                            TRANSFORMANDO CONHECIMENTO EM <br> <span>REALIDADE DIGITAL</span>.
                         </h1>
 
                         <p><q>Precisamos de mais modelos femininos que sejam bons em tecnologia, que sejam empreendedores. Hoje, poucas mulheres assim aparecem na mídia, e se as meninas não são representadas na televisão como inteligentes, boas em matemática e ciências, elas não têm referência à medida que crescem.</q> <br> — <em>Randi Zuckerberg</em></p>
                     </div> <!--txt-esq-->
                     <div class="img-flut">
-                        <img src="imagens/fundo.png" alt="pefil">
+                        <img src="imagens/fundozandi.png" alt="pefil">
                     </div> <!--img-flut-->
                 </div> <!--flex-->
             </div> <!--superior-->
@@ -91,7 +91,7 @@
             <div class="superior">
                 <div class="flex">
                     <div class="img-sobre">
-                        <img src="imagens/fundo.png" alt="fotosobre">
+                        <img src="imagens/tendencia-de-cor-2022-respingo-abstrato-roxo-de-mancha-liquida-disforme-ilustracao-para-banners-de-design-de-apresentacao-panfletos-cartoes-postais-logotipo.png" alt="fotosobre">
                     </div> <!--img-sobre-->
 
                     <div class="txt-sobre">
@@ -118,10 +118,12 @@
                             </a>
                             
 
-                            <a href="#"></a>
-                            <button class="lkdn" target="_blank">
+                            <a href="https://www.linkedin.com/in/bianca-melo-caetano" 
+                                target="_blank"> 
+                                <button class="lkdn">
                                 <i class="bi bi-linkedin"></i>
                             </button>
+                            </a>
                         </div> <!--redes-sociais-->
                     </div> <!--txt-sobre-->
                 </div> <!--flex-->
