--- a/Portfólio/port.html
+++ b/Portfólio/port.html
@@ -1,91 +1,1 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfólio</title>
-    <link rel="stylesheet" href="style.css"> <!-- estilo -->
-    <link rel="shortcut icon" href="imagens/logob.png" type="image/png"> <!-- icon -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
-</head>
-
-<body>
-    <header>
-        <div class="superior">
-            <div class="logo"> <a href="#"> <img src="imagens/image (1).png" alt="Logo Bianca"> </a> </div>
-            <nav class="menu"> <a href="#">Home</a> <a href="#">Especialidades</a> <a href="#">Sobre</a> <a
-                    href="#">Projetos</a> </nav>
-            <div class="contato"> <a href="#"> <button>Contato</button> </a> </div>
-        </div>
-    </header>
-    <main>
-        <section class="cont-principal">
-            <div class="superior">
-                <div class="flex">
-                    <div class="txt-esq">
-                        <h1> TRANSFORMANDO CONHECIMENTO EM <br> <span>REALIDADE DIGITAL</span>. </h1>
-                        <p><q>Precisamos de mais modelos femininos que sejam bons em tecnologia, que sejam
-                                empreendedores. Hoje, poucas mulheres assim aparecem na mídia, e se as meninas não são
-                                representadas na televisão como inteligentes, boas em matemática e ciências, elas não
-                                têm referência à medida que crescem.</q> <br> — <em>Randi Zuckerberg</em></p>
-                    </div> <!--txt-esq-->
-                    <div class="img-flut"> <img src="imagens/fundozandi.png" alt="pefil"> </div> <!--img-flut-->
-                </div> <!--flex-->
-            </div> <!--superior-->
-        </section> <!--cont-principal-->
-        <section class="especialidades">
-            <div class="superior">
-                <h2 class="titulo"> MINHAS <span>ESPECIALIDADES.</span> </h2>
-                <div class="flex"> <a href="https://github.com/bibimelox/CSS" target="_blank">
-                        <div class="esp-box"> <i class="bi bi-pc-display-horizontal"></i>
-                            <h3>Front - end</h3>
-                            <p>Possuo conhecimento em HTML5, CSS3 e JavaScript. Algumas das minhas habilidades são:
-                                Design Responsivo, Media Screen, Elementos Hover, estilos keyframes com imagens animadas
-                                flutuantes, entre outros.</p>
-                        </div>
-                    </a> <a href="https://github.com/bibimelox/MySQL" target="_blank">
-                        <div class="esp-box"> <i class="bi bi-database"></i>
-                            <h3>MySQL</h3>
-                            <p>Consigo facilmente retornar dados utilizando MySQL, concactenar colunas, alterar
-                                caracteres. Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia adipisci
-                                vero repellat molestias rerum eius.</p>
-                        </div>
-                    </a> <a href="https://github.com/bibimelox/PowerBI" target="_blank">
-                        <div class="esp-box"> <i class="bi bi-graph-down"></i>
-                            <h3>Power BI</h3>
-                            <p>Pela plataforma Power BI construo relatórios e dashboards que mostram números,
-                                estatísticas, valores, listas e gráficos de forma que os dados interajam entre eles,
-                                incluindo a opção de filtragem personalizada.</p>
-                        </div>
-                    </a> </div> <!--flex-->
-            </div> <!--superior-->
-        </section> <!--especialidades-->
-        <section class="sobre-mim">
-            <div class="superior">
-                <div class="flex">
-                    <div class="img-sobre"> <img
-                            src="imagens/tendencia-de-cor-2022-respingo-abstrato-roxo-de-mancha-liquida-disforme-ilustracao-para-banners-de-design-de-apresentacao-panfletos-cartoes-postais-logotipo.png"
-                            alt="fotosobre"> </div> <!--img-sobre-->
-                    <div class="txt-sobre">
-                        <h2> OLÁ MUNDO! <span>SOU BIANCA CAETANO.</span> </h2>
-                        <p> Tenho 18 anos, estou cursando Análise e desenvolvimento de sistemas. Meus conhecimentos
-                            incluem HTML, CSS, JavaScript, Banco de dados MySQL, Power BI e o básico do Python. Quando
-                            comecei a faculdade tinha em mente o cargo de Analista de Sistemas, mas, trabalhando um
-                            pouco em cada cargo, me encontrei na área Front-End. Ainda estou estudando, pois quero
-                            sempre ter mais conhecimento e dominar melhor as linguagens de Back-End para logo ser uma
-                            desenvolvedora Full-Stack! </p>
-                        <div class="redes-sociais"> <a href="https://github.com/bibimelox" target="_blank"> <button
-                                    class="git"> <i class="bi bi-github"></i> </button> </a> <a href="#"> <button
-                                    class="inst" target="_blank"> <i class="bi bi-instagram"></i> </button> </a> <a
-                                href="https://www.linkedin.com/in/bianca-melo-caetano" target="_blank"> <button
-                                    class="lkdn"> <i class="bi bi-linkedin"></i> </button> </a> </div>
-                        <!--redes-sociais-->
-                    </div> <!--txt-sobre-->
-                </div> <!--flex-->
-            </div> <!--superior-->
-        </section> <!--sobre mim-->
-    </main>
-</body>
-
-</html>
+<!DOCTYPE html> <html lang="pt-br"> <head> <meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>Portfólio</title> <link rel="stylesheet" href="style.css"> <!-- estilo --> <link rel="shortcut icon" href="imagens/logob.png" type="image/png"> <!-- icon --> <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"> </head> <body> <header> <div class="superior"> <div class="logo"> <a href="#"> <img src="imagens/image (1).png" alt="Logo Bianca"> </a> </div> <nav class="menu"> <a href="#">Home</a> <a href="#">Especialidades</a> <a href="#">Sobre</a> <a href="#">Projetos</a> </nav> <div class="contato"> <a href="#"> <button>Contato</button> </a> </div> </div> </header> <main> <section class="cont-principal"> <div class="superior"> <div class="flex"> <div class="txt-esq"> <h1> TRANSFORMANDO CONHECIMENTO EM <br> <span>REALIDADE DIGITAL</span>. </h1> <p><q>Precisamos de mais modelos femininos que sejam bons em tecnologia, que sejam empreendedores. Hoje, poucas mulheres assim aparecem na mídia, e se as meninas não são representadas na televisão como inteligentes, boas em matemática e ciências, elas não têm referência à medida que crescem.</q> <br> — <em>Randi Zuckerberg</em></p> </div> <!--txt-esq--> <div class="img-flut"> <img src="imagens/fundozandi.png" alt="pefil"> </div> <!--img-flut--> </div> <!--flex--> </div> <!--superior--> </section> <!--cont-principal--> <section class="especialidades"> <div class="superior"> <h2 class="titulo"> MINHAS <span>ESPECIALIDADES.</span> </h2> <div class="flex"> <a href="https://github.com/bibimelox/CSS" target="_blank"> <div class="esp-box"> <i class="bi bi-pc-display-horizontal"></i> <h3>Front - end</h3> <p>Possuo conhecimento em HTML5, CSS3 e JavaScript. Algumas das minhas habilidades são: Design Responsivo, Media Screen, Elementos Hover, estilos keyframes com imagens animadas flutuantes, entre outros.</p> </div> </a> <a href="https://github.com/bibimelox/MySQL" target="_blank"> <div class="esp-box"> <i class="bi bi-database"></i> <h3>MySQL</h3> <p>Consigo facilmente retornar dados utilizando MySQL, concactenar colunas, alterar caracteres. Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia adipisci vero repellat molestias rerum eius.</p> </div> </a> <a href="https://github.com/bibimelox/PowerBI" target="_blank"> <div class="esp-box"> <i class="bi bi-graph-down"></i> <h3>Power BI</h3> <p>Pela plataforma Power BI construo relatórios e dashboards que mostram números, estatísticas, valores, listas e gráficos de forma que os dados interajam entre eles, incluindo a opção de filtragem personalizada.</p> </div> </a> </div> <!--flex--> </div> <!--superior--> </section> <!--especialidades--> <section class="sobre-mim"> <div class="superior"> <div class="flex"> <div class="img-sobre"> <img src="imagens/tendencia-de-cor-2022-respingo-abstrato-roxo-de-mancha-liquida-disforme-ilustracao-para-banners-de-design-de-apresentacao-panfletos-cartoes-postais-logotipo.png" alt="fotosobre"> </div> <!--img-sobre--> <div class="txt-sobre"> <h2> OLÁ MUNDO! <span>SOU BIANCA CAETANO.</span> </h2> <p> Tenho 18 anos, estou cursando Análise e desenvolvimento de sistemas. Meus conhecimentos incluem HTML, CSS, JavaScript, Banco de dados MySQL, Power BI e o básico do Python. Quando comecei a faculdade tinha em mente o cargo de Analista de Sistemas, mas, trabalhando um pouco em cada cargo, me encontrei na área Front-End. Ainda estou estudando, pois quero sempre ter mais conhecimento e dominar melhor as linguagens de Back-End para logo ser uma desenvolvedora Full-Stack! </p> <div class="redes-sociais"> <a href="https://github.com/bibimelox" target="_blank"> <button class="git"> <i class="bi bi-github"></i> </button> </a> <a href="#"> <button class="inst" target="_blank"> <i class="bi bi-instagram"></i> </button> </a> <a href="https://www.linkedin.com/in/bianca-melo-caetano" target="_blank"> <button class="lkdn"> <i class="bi bi-linkedin"></i> </button> </a> </div> <!--redes-sociais--> </div> <!--txt-sobre--> </div> <!--flex--> </div> <!--superior--> </section> <!--sobre mim--> </main> </body> </html> 
