--- a/Portfólio/port.html
+++ b/Portfólio/port.html
@@ -15,16 +15,35 @@
         <div class="superior">
             <div class="logo"> <a href="#"> <img src="imagens/chart.png" alt="Logo Bianca"> </a> </div> <!-- logo -->
             <nav class="menu">
-                <a href="#">Home</a>
-                <a href="#">Especialidades</a>
-                <a href="#">Sobre</a>
-                <a href="#">Projetos</a>
+                <ul>
+                    <a href="#">Home</a>
+                    <a href="#">Especialidades</a>
+                    <a href="#">Sobre</a>
+                    <a href="#">Projetos</a>
+                </ul>
             </nav>
             <div class="contato">
                 <a href="#">
                     <button>Contato</button>
                 </a>
             </div> <!-- contato -->
+
+            <div class="menu-mobile">
+                <div class="botao-fechar">
+                    <button class="fechar"> <i class="bi bi-x-lg"> </i></button>
+                </div> <!-- botao-fechar -->
+
+                <nav class="mob">
+                    <ul>
+                        <li> <a href="#"> Home </a> </li>
+                        <li> <a href="#"> Especialidades </a> </li>
+                        <li> <a href="#"> Sobre </a> </li>
+                        <li> <a href="#"> Projetos </a> </li>
+                    </ul>
+                </nav>
+
+            </div> <!-- menu-mobile -->
+
         </div> <!-- superior -->
     </header>
 
